--- a/CinemaBook/Scence/NewFeed/Movie/view/MovieViewController.xib
+++ b/CinemaBook/Scence/NewFeed/Movie/view/MovieViewController.xib
@@ -11,7 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
                 <outlet property="collectionViews" destination="Pbh-UF-bLe" id="1hE-Kk-jre"/>
+                <outlet property="height_view_search" destination="9YK-oO-ghC" id="Dpd-fN-4Sz"/>
+                <outlet property="txt_searchs" destination="bFk-Yp-DPa" id="dVY-vq-ixr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_search" destination="reI-hy-xE0" id="qCW-o3-DWX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -70,6 +73,60 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
+                                <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="reI-hy-xE0">
+                                    <rect key="frame" x="117" y="10" width="250" height="30"/>
+                                    <subviews>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tim kiem" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bFk-Yp-DPa">
+                                            <rect key="frame" x="25" y="0.0" width="220" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-delete-share-point" translatesAutoresizingMaskIntoConstraints="NO" id="5kU-ae-1HA">
+                                            <rect key="frame" x="5" y="5" width="20" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="20" id="1Bo-ch-CUD"/>
+                                                <constraint firstAttribute="height" constant="20" id="x16-kO-gkN"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QzZ-o2-6L5">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="psV-MX-PgP"/>
+                                            </constraints>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" title="Button"/>
+                                            <connections>
+                                                <action selector="btn_stopsearch:" destination="-1" eventType="touchUpInside" id="wAQ-wk-4kZ"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="bFk-Yp-DPa" firstAttribute="top" secondItem="reI-hy-xE0" secondAttribute="top" id="6as-0E-pna"/>
+                                        <constraint firstAttribute="width" constant="250" id="9YK-oO-ghC"/>
+                                        <constraint firstItem="QzZ-o2-6L5" firstAttribute="leading" secondItem="reI-hy-xE0" secondAttribute="leading" id="KRQ-yM-eF5"/>
+                                        <constraint firstAttribute="trailing" secondItem="bFk-Yp-DPa" secondAttribute="trailing" constant="5" id="WHR-Td-WcH"/>
+                                        <constraint firstItem="bFk-Yp-DPa" firstAttribute="leading" secondItem="reI-hy-xE0" secondAttribute="leading" constant="25" id="cS1-C6-0w7"/>
+                                        <constraint firstItem="QzZ-o2-6L5" firstAttribute="top" secondItem="reI-hy-xE0" secondAttribute="top" id="kfU-OG-QBc"/>
+                                        <constraint firstItem="5kU-ae-1HA" firstAttribute="centerY" secondItem="reI-hy-xE0" secondAttribute="centerY" id="lbV-kj-WHB"/>
+                                        <constraint firstAttribute="bottom" secondItem="bFk-Yp-DPa" secondAttribute="bottom" id="r8j-i4-MsU"/>
+                                        <constraint firstAttribute="height" constant="30" id="u9z-TK-y1v"/>
+                                        <constraint firstAttribute="bottom" secondItem="QzZ-o2-6L5" secondAttribute="bottom" id="uOq-RP-vWe"/>
+                                        <constraint firstItem="5kU-ae-1HA" firstAttribute="leading" secondItem="reI-hy-xE0" secondAttribute="leading" constant="5" id="w2f-9k-y8T"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="15"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CBm-Cz-7wL">
                                     <rect key="frame" x="372" y="15" width="22" height="20"/>
                                     <constraints>
@@ -77,16 +134,32 @@
                                         <constraint firstAttribute="height" constant="22" id="ReA-8b-sLZ"/>
                                     </constraints>
                                 </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kud-sn-PGq">
+                                    <rect key="frame" x="364" y="0.0" width="50" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="50" id="uSM-zw-P1k"/>
+                                    </constraints>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="btn_search:" destination="-1" eventType="touchUpInside" id="wub-k5-3Ea"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
                                 <constraint firstItem="CBm-Cz-7wL" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="0G8-97-pd6"/>
                                 <constraint firstItem="Xhv-2A-rCf" firstAttribute="leading" secondItem="toq-Pw-i4J" secondAttribute="leading" constant="10" id="7cA-7E-LaQ"/>
+                                <constraint firstItem="reI-hy-xE0" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="EkI-QO-7IQ"/>
+                                <constraint firstItem="kud-sn-PGq" firstAttribute="top" secondItem="toq-Pw-i4J" secondAttribute="top" id="MLi-sK-WP2"/>
                                 <constraint firstItem="mHj-dr-pim" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="aq1-hT-yQj"/>
+                                <constraint firstItem="CBm-Cz-7wL" firstAttribute="leading" secondItem="reI-hy-xE0" secondAttribute="trailing" constant="5" id="jZs-0N-FSw"/>
                                 <constraint firstItem="Xhv-2A-rCf" firstAttribute="centerY" secondItem="toq-Pw-i4J" secondAttribute="centerY" id="lTy-ZC-UHA"/>
+                                <constraint firstAttribute="trailing" secondItem="kud-sn-PGq" secondAttribute="trailing" id="pGL-iq-GY1"/>
                                 <constraint firstItem="CBm-Cz-7wL" firstAttribute="leading" secondItem="mHj-dr-pim" secondAttribute="trailing" constant="8" id="qhY-ks-gBS"/>
                                 <constraint firstAttribute="height" constant="50" id="qog-Cy-43N"/>
                                 <constraint firstAttribute="trailing" secondItem="CBm-Cz-7wL" secondAttribute="trailing" constant="20" id="rP8-Oz-C7k"/>
+                                <constraint firstAttribute="bottom" secondItem="kud-sn-PGq" secondAttribute="bottom" id="sUq-ec-Yz1"/>
                             </constraints>
                         </view>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Pbh-UF-bLe">
@@ -120,10 +193,11 @@
                 <constraint firstItem="AX9-Us-uV6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="fcd-uX-9WT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="132" y="96"/>
+            <point key="canvasLocation" x="131.8840579710145" y="95.758928571428569"/>
         </view>
     </objects>
     <resources>
+        <image name="icon-delete-share-point" width="26" height="26"/>
         <image name="icon-dropdown" width="24" height="24"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
     </resources>
