--- a/CinemaBook/Scence/Manager/Management/MangamentProduct/OrderProduct/view/OrderProductViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentProduct/OrderProduct/view/OrderProductViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,7 +13,9 @@
             <connections>
                 <outlet property="btn_edit" destination="Ljk-aE-cie" id="Nph-Wg-zFt"/>
                 <outlet property="collectionView" destination="PW4-Ya-pqL" id="Kma-dA-5Qz"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="height_btn_creata" destination="SlV-rM-Dv3" id="ev7-XB-9AG"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="osI-dS-kD3"/>
+                <outlet property="view_of_button_create" destination="LbO-5u-uuI" id="DM8-ip-bus"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,11 +24,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qTL-9D-utc">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="PW4-Ya-pqL">
-                            <rect key="frame" x="10" y="0.0" width="394" height="758"/>
-                            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="754"/>
+                            <color key="backgroundColor" systemColor="systemGray6Color"/>
                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aUi-tu-el4">
                                 <size key="itemSize" width="128" height="128"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -34,11 +37,11 @@
                             </collectionViewFlowLayout>
                         </collectionView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LbO-5u-uuI">
-                            <rect key="frame" x="0.0" y="758" width="414" height="60"/>
+                            <rect key="frame" x="0.0" y="754" width="414" height="60"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ljk-aE-cie">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ljk-aE-cie">
                                     <rect key="frame" x="20" y="10" width="374" height="40"/>
-                                    <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" systemColor="systemBlueColor"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                     <state key="normal" title="TẠO MÓN COMBO">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,7 +62,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="Ljk-aE-cie" secondAttribute="bottom" constant="10" id="1zL-SM-cP6"/>
                                 <constraint firstItem="Ljk-aE-cie" firstAttribute="top" secondItem="LbO-5u-uuI" secondAttribute="top" constant="10" id="BTE-AH-ZjL"/>
@@ -69,27 +72,38 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="LbO-5u-uuI" secondAttribute="bottom" id="35K-aa-oGP"/>
-                        <constraint firstAttribute="trailing" secondItem="PW4-Ya-pqL" secondAttribute="trailing" constant="10" id="HeK-zZ-KyE"/>
-                        <constraint firstItem="PW4-Ya-pqL" firstAttribute="top" secondItem="qTL-9D-utc" secondAttribute="top" id="aHH-5U-AAn"/>
+                        <constraint firstItem="PW4-Ya-pqL" firstAttribute="leading" secondItem="qTL-9D-utc" secondAttribute="leading" id="CZ2-c1-RTB"/>
+                        <constraint firstItem="LbO-5u-uuI" firstAttribute="top" secondItem="PW4-Ya-pqL" secondAttribute="bottom" id="ViB-yf-ssi"/>
                         <constraint firstAttribute="trailing" secondItem="LbO-5u-uuI" secondAttribute="trailing" id="b5H-O9-1lu"/>
-                        <constraint firstItem="LbO-5u-uuI" firstAttribute="top" secondItem="PW4-Ya-pqL" secondAttribute="bottom" id="eXU-1h-Trk"/>
-                        <constraint firstItem="PW4-Ya-pqL" firstAttribute="leading" secondItem="qTL-9D-utc" secondAttribute="leading" constant="10" id="mSw-Jw-1ZC"/>
+                        <constraint firstItem="PW4-Ya-pqL" firstAttribute="top" secondItem="qTL-9D-utc" secondAttribute="top" id="gts-5i-Yl0"/>
+                        <constraint firstAttribute="trailing" secondItem="PW4-Ya-pqL" secondAttribute="trailing" id="o0G-W1-lmE"/>
                         <constraint firstItem="LbO-5u-uuI" firstAttribute="leading" secondItem="qTL-9D-utc" secondAttribute="leading" id="r7V-rU-3bF"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemGray6Color"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qTL-9D-utc" secondAttribute="trailing" id="FPb-9N-DDS"/>
                 <constraint firstItem="qTL-9D-utc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="PRv-29-bTG"/>
                 <constraint firstItem="qTL-9D-utc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="XH2-Oi-JNs"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="qTL-9D-utc" secondAttribute="bottom" id="bLL-bc-hsc"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
